# EinsteinSummation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  einsum.cpp  einsum.hpp  expression.cpp  expression.hpp  main.cpp
.github/workflows/: action.yml  release.yml
benchmark/: benchmark.cpp
include/: einsum.hpp  einsum_helpers.hpp  einsum_single.hpp  input_handler.hpp  labels.hpp  matrices.hpp  n_einsum.hpp  unary_einsum.hpp
scripts/: amalgamate.py
single_include/: einsum.hpp
tests/: tests.cpp
